// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component should render correctly 1`] = `
<DocumentFragment>
  <div>
    <form
      class="form"
    >
      <div>
        <label
          class="label"
          for="username"
        >
          Username
          <input
            class="input"
            id="username"
          />
        </label>
      </div>
      <div>
        <label
          class="label"
          for="password"
        >
          Password
          <input
            class="input"
            id="password"
            type="password"
          />
        </label>
      </div>
      <div>
        <button
          class="button"
          type="button"
        >
          Log in
        </button>
      </div>
    </form>
    <small
      class="auth-footer"
    >
      <span>
        Dont have an account? 
      </span>
      <a
        href="/register"
      >
        Regiter
      </a>
    </small>
  </div>
</DocumentFragment>
`;

exports[`Register component should render correctly 1`] = `
<DocumentFragment>
  <div>
    <form
      class="form"
    >
      <div>
        <label
          class="label"
          for="username"
        >
          Username
          <input
            class="input"
            id="username"
          />
        </label>
        <div
          class="input-error"
        />
      </div>
      <div>
        <label
          class="label"
          for="password"
        >
          Password
          <input
            class="input"
            id="password"
            type="password"
          />
        </label>
        <div
          class="input-error"
        />
      </div>
      <div>
        <label
          class="label"
          for="password_confirmation"
        >
          Password confirmation
          <input
            class="input"
            id="password_confirmation"
            type="password"
          />
        </label>
        <div
          class="input-error"
        />
      </div>
      <div>
        <button
          class="button"
          type="button"
        >
          Register
        </button>
      </div>
    </form>
    <small
      class="auth-footer"
    >
      <span>
        Already have an account? 
      </span>
      <a
        href="/login"
      >
        Login
      </a>
    </small>
  </div>
</DocumentFragment>
`;
